# sia-tp3

./: .gitignore  README.MD  exer1.py  exer1_and.py  exer1_xor.py  exer2.py  exer2_raw.py  generalizations.csv  gif.py  main.py  pyproject.toml
configs/: ejer1.json  ejer2_generalization.json  ejer2_training.json  ejer3.json
exer1/: and.py  exer1_and.py  exer1_xor.py  gif.py  xor.py
exer1/configs/: and.json
exer2/: decision.py  exer2_decision.py  exer2_generalization.py  exer2_main.py  exer2_main_lr.py  exer2_perceptron.py  exer2_raw.py  exer2_utils.py  generalization.py  generalize.py  learn.py  main.py  main_lr.py  perceptron.py  utils.py
exer2/configs/: training.json  (+1 more)
exer3/: accuracy.py  generate_bar_graphic.py  generate_training_images.py  main.py  matriz_de_confusion.py  matriz_de_confusion_10_10.py  metricas.py  mlp_classify_numbers.py  mlp_classify_numbers_images.py  mlp_pair_numbers.py  mlp_xor_test.py  multilayer_xor.py  perceptron.py  plot_accuracy_bars.py  plot_error_comparison.py  relu_vs_leaky_relu.py
exer4/: generar_matriz_de_confusion.py  mlp_mnist.py  test_mlp_mnist.py
old_exer2/: normalized_dataset.py  utils.py
perceptrons/: LinearPerceptron.py  NonLinearPerceptron.py  SigmoidPerceptron.py  StepPerceptron.py  TanhPerceptron.py
ref/: NonLinearFunctions.py  Perceptron.py  activatorFunctions.py  generate_training_images.py  main.py  mlp_classify_numbers.py  mlp_classify_numbers_images.py  mlp_pair_numbers.py  mlp_xor_test.py  multiLayerPerceptron.py  normalizers.py  perceptron.py  singleLayerPerceptron.py
training/: TP3-ej2-escalado.csv
(+119 files in other folders)
