[project]
name = "sia-tp3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "imageio>=2.37.0",
    "matplotlib>=3.10.1",
    "numpy>=1.26.0,<2.0.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.18.1",
]

